    + reenabled libedc support (closes: #387429)
  * fixed installation of FAQ and FORK files (closes: #386735)
  * cdda2ogg/cdda2mp3 are unified, installing cdda2mp3 as symlink
  * remove . from the include list, patch by Modestas Vainius
    (closes: #358497, acknowledging NMU by Steinar H. Gunderson)
  * readded mkzftree to the mkisofs files (closes: #387927)

 -- Eduard Bloch <blade@debian.org>  Tue, 12 Sep 2006 11:16:34 +0200

cdrkit (5:1.0~pre4-1.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Don't build with -I. -- fixes include of wrong endian.h, which in turn
    makes sure mkisofs capitalizes filenames correctly; patch from 
    Modestas Vainius. (Closes: #358497)

 -- Steinar H. Gunderson <sesse@debian.org>  Thu, 21 Sep 2006 13:58:12 +0200

cdrkit (5:1.0~pre4-1) unstable; urgency=low

  [ Peter Samuelson ]
  * clean target fixes to purge zisofs leftovers

  [ Eduard Bloch ]
  * added detection for libcam header (closes: #385975)

  [ Joerg Jaspert ]
  * Added link for cdrecord manpage to dummy package, thanks to Ryan Finnie

 -- Joerg Jaspert <joerg@debian.org>  Tue,  5 Sep 2006 12:15:45 +0200

cdrkit (5:1.0~pre3-1) unstable; urgency=low

  [ Eduard Bloch ]
  * New upstream snapshot
  * Updates/fixes of README.ATAPI.setup, README.Debian, wodim.NEWS from
    Michael Ablassmeier

  [ Joerg Jaspert ]
  * Several other upstream fixes included, should make it work on ppc.

 -- Joerg Jaspert <joerg@debian.org>  Mon,  4 Sep 2006 19:38:57 +0200

cdrkit (5:1.0~pre2-1) unstable; urgency=low

  * Restored the build system of zisofs-tools and changed to its use in
    debian/rules. It is a separate project with a mature build system while
    the replacement would need improvements to keep up.

 -- Eduard Bloch <blade@debian.org>  Mon,  4 Sep 2006 01:24:22 +0200

cdrkit (5:1.0~pre1-1) unstable; urgency=low

  [ Eduard Bloch ]
  * dropped the shm build (kernel 2.2 is history)
  * dropped dpatch integration, we are the upstream now