@@ -65,7 +65,7 @@ open_cdrdefaults()
 	 * don't contribute work and don't give support, they are causing extra
 	 * work for me and this way slow down the cdrecord development.
 	 */
-	return (defltopen("/etc/default/wodim"));
+	return (defltopen("/etc/wodim.conf"));
 }
 
 EXPORT void
