@@ -10,7 +10,7 @@ If you have just one CD writer in your computer, CD-writing should work out of
 the box. There should be a symbolic link /dev/cdrw which points to your actual
 CD-Writer's device (e. g. /dev/hdb). If the link is not present (eg.  the
 system is not using udev/devfs) or if you want to use a different device as
-default, you can configure the device in /etc/default/wodim:
+default, you can configure the device in /etc/wodim.conf:
 
   CDR_DEVICE=/dev/hdd
 
@@ -64,14 +64,14 @@ Where we start:
       ln -s scd1 cdrw  # NOTE: see above, maybe cdrom
    Check the new SCSI settings:
       wodim -scanbus
-   Setup wodim's environment - edit /etc/default/wodim:
+   Setup wodim's environment - edit /etc/wodim.conf:
       CDR_DEVICE=cdrw
       cdrw=1,0,0        4       8m
       cdrom=1,2,0       0       0m
    Insert the right values, the fields are described in the manpage
    of wodim. Alternatively, you may use these values as
    wodim-parameter or take a frontend with an own configuration
-   scheme, then you don't need to modify /etc/default/wodim.
+   scheme, then you don't need to modify /etc/wodim.conf.
    The columns must be separated by tabs.
 9. It's done! Insert a CD and try "wodim -v -toc". To create your first CD-ROM, try:
    
