@@ -1,3 +1,0 @@
-etc/default/wodim etc/wodim/wodim
-etc/default/rscsi etc/wodim/rscsi
-usr/share/man/man1/wodim.1.gz usr/share/man/man1/wodim.1.gz
