@@ -489,14 +489,14 @@ Situation:
       ln -s scd1 cdrw  # NOTE: see above, maybe cdrom
    Check the new SCSI settings:
       wodim -scanbus
-   Setup wodim's environment - edit /etc/default/wodim:
+   Setup wodim's environment - edit /etc/wodim.conf:
       CDR_DEVICE=cdrw
       cdrw=1,0,0        4       8m
       cdrom=1,2,0       0       0m
    Input the right values, the fields are described in the manpage
    of wodim. Alternatively, you may use this values as
    wodim-parameter or take a frontend with an own configuration
-   scheme, then you don't need to modify /etc/default/wodim.
+   scheme, then you don't need to modify /etc/wodim.conf.
 9. It's done! Insert a CD and try "wodim -v -toc"
 /*--------------------------------------------------------------------------*/
 He had constant buffer underrun problems:
