@@ -177,7 +177,7 @@ If the argument to the
 .B dev=
 option does not contain the characters ',', '/', '@' or ':',
 it is interpreted as an label name that may be found in the file
-/etc/default/wodim (see FILES section).
+/etc/wodim.conf (see FILES section).
 .sp
 The options
 .B \-i
@@ -276,7 +276,7 @@ Despite the name, the software is not beta.
 .TP
 .B CDR_DEVICE
 This may either hold a device identifier that is suitable to the open
-call of the SCSI transport library or a label in the file /etc/default/wodim.
+call of the SCSI transport library or a label in the file /etc/wodim.conf.
 .TP
 .B RSH
 If the 
@@ -314,13 +314,13 @@ login shell.
 
 .SH FILES
 .TP
-/etc/default/wodim
-Default values can be set for the following options in /etc/default/wodim.
+/etc/wodim.conf
+Default values can be set for the following options in /etc/wodim.conf.
 .RS
 .TP
 CDR_DEVICE
 This may either hold a device identifier that is suitable to the open
-call of the SCSI transport library or a label in the file /etc/default/wodim
+call of the SCSI transport library or a label in the file /etc/wodim.conf
 that allows to identify a specific drive on the system.
 .TP
 Any other label
