@@ -1,6 +1,6 @@
 #ident @(#)rscsi.dfl	1.3 05/08/09 Copyr 2000 J. Schilling
 #
-# This file is /etc/default/rscsi
+# This file is /etc/rscsi.conf
 #
 # NOTE: If this file is not present, rscsi will reject to work.
 #
